--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "你是我的梦想"
+description: "我是一个粉刷匠"
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
